2007-03-02  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/openfiles.cpp:
	
	Fixed cast.
	Really fixed bug #412953.

2007-02-28  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.17.95.

2007-02-28  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:
	
	Get default system information with uname.
	Patch by Joe Marcus Clarke <marcus@freebsd.org>.
	See bug #412953.	

2007-02-28  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/openfiles.cpp:
	
	Fixed build on FreeBSD.
	Patch by Joe Marcus Clarke <marcus@freebsd.org>.
	See bug #412953.

2007-02-28  Mariano Suárez-Alvarez  <mariano@gnome.org>

	* NEWS:
	
	Released 2.17.94.

2007-02-28  Mariano Suárez-Alvarez  <mariano@gnome.org>

	* help/C/gnome-system-monitor.xml: added a description, to make g-d-u
	happy
	* po/POTFILES.skip: add gnome-system-monitor.desktop.in to make distcheck 
	happy
	* gnome-doc-utils.make: removed from SVN, as this is a generated file

2007-02-28  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.17.93.

2007-02-28  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* help/C/gnome-system-monitor-C.omf:
	* help/gnome-system-monitor.omf.in:

	Added missing omf.in.
	Dropped old and now useless .omf.

2007-02-25  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.17.92.

2007-02-19  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:

	Ignore /media/* in disk space.
	Closes #409427.
	
2007-02-12  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.17.91.

2007-02-07  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:
	
	Try to get hostname in a smarter way.

2007-02-05  Daniel Nylander <po@danielnylander.se>

	* help/sv/sv.po: Added Swedish translation.
	* help/figures/*: Added screenshot.
	* help/Makefile.am: Added sv to DOC_LINGUAS.
	* po/sv.po: Updated Swedish translation.

2007-02-05  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:
	
	Solaris support.
	Patch by <hua.zhang@sun.com>.
	See #374090.
