@@ -1,3 +1,11 @@
+2007-03-04  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* src/load-graph.cpp:
+	
+	Re-implemented the network autoscaling.
+	It's nicer but the displayed scale is still meaningless.
+
 2007-03-02  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
